Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.
Admin message
The migration is almost done, at least the rest should happen in the background. There are still a few technical difference between the old cluster and the new ones, and they are summarized in this issue. Please pay attention to the TL:DR at the end of the comment.
Sporadic flickering glitches on Ryzen 6850U, Radeon 680M
A while after booting, i get flickering artifacts, mostly on the left side of the screen.
They occur approximately every 20-60 seconds, and only last for some fractions of a second.
They look similar to the artifacts show in the attached video in #2192, but are not that regular, and sometimes span a larger area of the screen.
I have not found a good way to trigger them by a specific action,
but they seem to occur more often when e.g. switching tabs in Firefox or hovering over the file tree in vs-code until a tooltip appears.
But this could also be coincidence, as they also appear when watching videos with mpv in fullscreen.
Switching between Xorg and Wayland does not make a difference, and i also tried switching from KDE to xfce.
However, while kernel versions 6.0, 6.1 and even 6.2.rc2 show the glitches, it seems that version 5.19.13 is not affected, I have not seen a single glitch with it.
Hardware description:
CPU: AMD Ryzen 7 PRO 6850U
GPU: Rembrandt, Radeon 680M
System Memory: 16GB LPDDR5-6400
Display(s): ThinkPad T14 Gen 3 (AMD) builtin display (WUXGA non-touch)
Type of Display Connection: eDP
System information:
Distro name and Version: arch
Kernel version: linux 6.1.6.arch1-1
AMD official driver version: mesa 22.3.3-1, xf86-video-amdgpu 22.0.0-1
Desktop Environment: KDE 5.101.0 / Plasma 5.26.5
How to reproduce the issue:
Boot with kernel 6.0, 6.1, 6.2rc2
Open Firefox, any video player or vs-code
Wait for flickering glitches to appear
Attached files:
Screenshots/video files
Since the glitches are not easily triggerable i was not able to take a video of them yet.
Log files (for system lockups / game freezes / crashes)
I can't see any driver/gpu related errors in the logs.
I get a very similar problem on my R7 6800H CPU, but I've been getting this issue on and off for the last 4-5 months now. Setting the screen on a high refresh rate seems to exacerbate the problem.
The laptop is a Lenovo Legion 5 16" laptop, with 2 GPUs: 680M (igpu) and a RX 6700 (dgpu). Though I very rarely use the dgpu.
I'm on Fedora 37 (AMD) right now, though this was reproduced in Archlinux.
Kernel: 6.1.6-200.fc37.x86_64
Laptop is currently on switchable graphics (iGPU by default)
The following video was taken a few months ago (October) but while the issue seems to be happening a bit less often it does happen, especially when there's alot of white on screen (Though that might be a false positive, just something I noticed. I may be wrong.)
Applied the patch to 6.2-rc5 and for the last hour no flickering appeared.
There was one very short glitch, where it looked like the entire screen was shifted to the right, but i was not able to reproduce it.
I'll continue using the patched kernel and report back in a few days.
I'll try to apply it to my laptop (As it's not my main computer) tonight. First time I compile a kernel, and I'm a bit green behind the ears and I'll have to check how to this on Fedora.
So with the patch things got a lot better, but there are still a few glitches, however they are a bit different and happen less often.
As already described in my previous comment, sometimes the entire screen gets shifted to the right (very rare).
Additionally, sometimes a horizontal stripe spanning the entire width of the screen around the current cursor position flickers for a brief moment. This also happens very rarely.
I am sorry if this is not the right topic, but similar things occur on my laptop.
After boot the screen starts to flicker in white, and at some point it stays solid white, with only the mouse cursor visible and moving.
The CPU is the same - Ryzen 6850u, coming with the integrated 680M, no dedicated GPU.
The laptop is a 14' HP.
The OS is Manjaro 6.1.9, new install.
Everything was working fine for a week, right until today, when I removed the original 16GB ram (Kioxia) and slotted 2x32GB from Crucial.
The laptop is driving two TVs - one 55' and one 32' via HDMI and USB-C->HDMI respectively. This is not helping much, as the problem persists on the dedicated display too.
The drive is dual-boot with Win10 and the windows version doesn't have that problem whatsoever.
If after login I manage to switch off the laptop's display from the Display window and have only the bigger TV switched on then all is fine. But when I switch the second one the flickering starts happening.
I am willing to provide any and every information possible, if only I know how to extract it. I have few years of usage, but not much experience. And I've been on xUbuntu until a week ago on the older laptop.
Edit: I've just tried to capture it with a screen recorder, but it's not showing in the playback. Sadly I'll have to get it with a phone.
Untitled_Project
I seem to be getting a similar issue on my 6800H on a Lenovo Legion 7 16". However, for me it only presents under very specific circumstances: with an external display connected (seemingly to the 680M, I don't recall it happening with anything else) and the internal display set to 165Hz instead of 60. It doesn't seem to present when the internal display is the only one connected, and never appears when the internal display is at 60Hz.
I tried both the patch, and amdgpu.sg_display=0. Neither seem to fix the occasional local flickering for me (as described in a previous comment).
However i never get the full screen flickering other people describe here.